--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,5 +50,7 @@
 
     <p>{{ site.description }}</p>
   </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.22/require.min.js" data-main="{{ "/js/main" | prepend: site.baseurl }}"></script>
 </body>
 </html>
