--- a/css/main.scss
+++ b/css/main.scss
@@ -2,3 +2,11 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 @charset "utf-8";
+
+@import "settings";
+@import "extends";
+
+@import "toolbox";
+@import "algorhythms";
+
+@import "shame";
