--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -9,14 +9,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/2.3.4/mocha.min.css">
   {% else %}
-  <link rel="stylesheet" href="http://localhost/cdn/normalize/normalize.min.css">
-  <link rel="stylesheet" href="http://localhost/cdn/mocha/mocha.min.css">
+  <link rel="stylesheet" href="{{ "/bower_components/normalize-css/normalize.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/bower_components/mocha/mocha.css" | prepend: site.baseurl }}">
   {% endif %}
 
   {% if jekyll.environment == "production" %}
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
   {% else %}
-  <script src="http://localhost/cdn/modernizr/modernizr.min.js"></script>
+  <script src="{{ "/bower_components/modernizr/modernizr.js" | prepend: site.baseurl }}"></script>
   {% endif %}
 </head>
 
@@ -26,7 +26,7 @@
   {% if jekyll.environment == "production" %}
   <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.22/require.min.js" data-main="{{ "/js/config.spec" | prepend: site.baseurl }}"></script>
   {% else %}
-  <script src="http://localhost/cdn/require/require.min.js" data-main="{{ "/js/config-localhost.spec" | prepend: site.baseurl }}"></script>
+  <script src="{{ "/bower_components/requirejs/require.js" | prepend: site.baseurl }}" data-main="{{ "/js/config-localhost.spec" | prepend: site.baseurl }}"></script>
   {% endif %}
 </body>
 
