--- a/_sass/_shame.scss
+++ b/_sass/_shame.scss
@@ -1,3 +1,22 @@
 /* =========================================================================
    Shame
    ========================================================================= */
+
+h1 {
+  line-height: lines(4);
+}
+
+[role="banner"] {
+  a {
+    &:hover,
+    &:focus {
+      text-decoration: inherit;
+    }
+  }
+}
+
+nav {
+  li {
+    display: inline-block;
+  }
+}
