--- a/_sass/_toolbox.scss
+++ b/_sass/_toolbox.scss
@@ -1,3 +1,3 @@
 @import "toolbox/core";
-//@import "toolbox/utilities";
-//@import "toolbox/components";
+@import "toolbox/utilities";
+@import "toolbox/components";
