--- a/templates/directives/keyboard.html
+++ b/templates/directives/keyboard.html
@@ -1,1 +1,1 @@
-<button ng-mousedown="Ctrl.synth.noteOn(key)" ng-mouseup="Ctrl.synth.noteOff()" ng-repeat="key in Ctrl.keys">{{key}}</button>
+<button ng-mousedown="KeyboardCtrl.synth.noteOn(key)" ng-mouseup="KeyboardCtrl.synth.noteOff()" ng-repeat="key in KeyboardCtrl.keys">{{key}}</button>
