--- a/templates/directives/range.html
+++ b/templates/directives/range.html
@@ -1,3 +1,3 @@
-<label for="{{Ctrl.id}}">{{Ctrl.label}}</label>
-<input type="range" name="{{Ctrl.id}}" id="{{Ctrl.id}}" ng-model="Ctrl.ngModel" min="{{Ctrl.min}}" max="{{Ctrl.max}}" value="{{Ctrl.ngModel}}">
-<span>{{Ctrl.ngModel}}</span>
+<label for="{{RangeCtrl.id}}">{{RangeCtrl.label}}</label>
+<input type="range" name="{{RangeCtrl.id}}" id="{{RangeCtrl.id}}" ng-model="RangeCtrl.ngModel" min="{{RangeCtrl.min}}" max="{{RangeCtrl.max}}" value="{{RangeCtrl.ngModel}}">
+<span>{{RangeCtrl.ngModel}}</span>
