--- a/_sass/_algorhythms.scss
+++ b/_sass/_algorhythms.scss
@@ -1,3 +1,3 @@
 //@import "algorhythms/core";
 //@import "algorhythms/utilities";
-//@import "algorhythms/components";
+@import "algorhythms/components";
