Manually setup template

--- a/templates/directives/keyboard.html
+++ b/templates/directives/keyboard.html
@@ -1,1 +1,188 @@
-<button ng-mousedown="KeyboardCtrl.synth.noteOn(key)" ng-mouseup="KeyboardCtrl.synth.noteOff()" ng-repeat="key in KeyboardCtrl.keys">{{key}}</button>
+<!--FIXME ng-repeat="key in KeyboardCtrl.keys"-->
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 518 99" class="Keyboard">
+
+  <rect x="0" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(21)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="5" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(22)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="10" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(23)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+
+  <rect x="20" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(24)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="25" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(25)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="30" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(26)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="35" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(27)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="40" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(28)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="50" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(29)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="55" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(30)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="60" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(31)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="65" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(32)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="70" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(33)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="75" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(34)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="80" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(35)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+
+  <rect x="90" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(36)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="95" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(37)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="100" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(38)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="105" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(39)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="110" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(40)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="120" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(41)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="125" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(42)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="130" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(43)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="135" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(44)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="140" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(45)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="145" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(46)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="150" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(47)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+
+  <rect x="160" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(48)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="165" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(49)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="170" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(50)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="175" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(51)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="180" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(52)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="190" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(53)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="195" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(54)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="200" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(55)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="205" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(56)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="210" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(57)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="215" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(58)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="220" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(59)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+
+  <rect x="230" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(60)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="235" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(61)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="240" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(62)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="245" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(63)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="250" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(64)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="260" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(65)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="265" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(66)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="270" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(67)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="275" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(68)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="280" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(69)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="285" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(70)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="290" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(71)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+
+  <rect x="300" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(72)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="305" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(73)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="310" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(74)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="315" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(75)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="320" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(76)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="330" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(77)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="335" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(78)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="340" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(79)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="345" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(80)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="350" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(81)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="355" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(82)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="360" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(83)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+
+  <rect x="370" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(84)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="375" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(85)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="380" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(86)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="385" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(87)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="390" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(88)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="400" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(89)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="405" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(90)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="410" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(91)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="415" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(92)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="420" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(93)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="425" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(94)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="430" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(95)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+
+  <rect x="440" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(96)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="445" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(97)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="450" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(98)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="455" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(99)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="460" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(100)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="470" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(101)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="475" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(102)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="480" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(103)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="485" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(104)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="490" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(105)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+    <rect x="495" class="Keyboard-key Keyboard-key--black"
+      ng-mousedown="KeyboardCtrl.synth.noteOn(106)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+  <rect x="500" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(107)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+
+  <rect x="510" class="Keyboard-key Keyboard-key--white"
+    ng-mousedown="KeyboardCtrl.synth.noteOn(108)" ng-mouseup="KeyboardCtrl.synth.noteOff()" />
+</svg>
