--- a/templates/app.controller.html
+++ b/templates/app.controller.html
@@ -1,1 +1,3 @@
+<div midi-select noteon="vm.synth.noteOn" noteoff="vm.synth.noteOff"></div>
 <div piano-roll mousedown="vm.synth.noteOn" mouseup="vm.synth.noteOff"></div>
+
