--- a/css/main.css
+++ b/css/main.css
@@ -1,2 +1,14 @@
-@import url("toolbox/core/svg.css");
-@import url("app/piano/piano-roll.css");
+@charset "utf-8";
+
+@import url("_variables.css");
+
+@import url("toolbox/core/_axioms.css");
+@import url("toolbox/core/_text.css");
+@import url("toolbox/core/_embed.css");
+@import url("toolbox/core/_forms.css");
+
+@import url("toolbox/components/_container.css");
+
+@import url("theme/_svg.css");
+
+@import url("app/piano/_piano-roll.css");
