--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,6 @@
 @charset "utf-8";
 
-@import url("_variables.css");
-
-@import url("toolbox/core/_axioms.css");
-@import url("toolbox/core/_text.css");
-@import url("toolbox/core/_embed.css");
-@import url("toolbox/core/_forms.css");
-
-@import url("toolbox/components/_container.css");
-
-@import url("theme/_svg.css");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.0.9/angular-material.min.css");
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
 @import url("app/piano/_piano-roll.css");
