--- a/templates/synth/modules/simple-oscillator.directive.html
+++ b/templates/synth/modules/simple-oscillator.directive.html
@@ -1,8 +1,24 @@
-<select ng-model="params.osc.type" ng-options="type as type for type in types"></select>
+<md-input-container>
+  <label>Type</label>
+  <md-select ng-model="params.osc.type">
+    <md-option ng-repeat="type in types">{{ type }}</md-option>
+  </md-select>
+</md-input-container>
 
-<select ng-model="params.filter.type" ng-options="type as type for type in filters"></select>
+<md-input-container>
+  <label>Filter</label>
+  <md-select ng-model="params.filter.type">
+    <md-option ng-repeat="type in filters">{{ type }}</md-option>
+  </md-select>
+</md-input-container>
 
-<input type="range" min="1000" max="10000" ng-model="params.filter.frequency">
+<md-slider min="1000" max="10000"
+  aria-label="Filter frequency"
+  ng-model="params.filter.frequency">
+</md-slider>
 
-<input type="range" min="0" max="1" step="0.01" ng-model="params.gain.gain">
+<md-slider min="0" max="1" step="0.01"
+  aria-label="Gain"
+  ng-model="params.gain.gain">
+</md-slider>
 
