--- a/templates/synth/modules/to-master.directive.html
+++ b/templates/synth/modules/to-master.directive.html
@@ -1,1 +1,4 @@
-<input type="range" min="0" max="1" step="0.01" ng-model="params.gain">
+<md-slider min="0" max="1" step="0.01"
+  aria-label="Gain"
+  ng-model="params.gain">
+</md-slider>
