--- a/templates/index.controller.html
+++ b/templates/index.controller.html
@@ -1,3 +1,3 @@
-<div midi-select noteon="vm.synth.noteOn" noteoff="vm.synth.noteOff"></div>
-<div piano-roll mousedown="vm.synth.noteOn" mouseup="vm.synth.noteOff"></div>
+<div midi-select noteon="vm.start" noteoff="vm.stop"></div>
+<div piano-roll mousedown="vm.start" mouseup="vm.stop"></div>
 
