--- a/src/resources/elements/piano-roll.css
+++ b/src/resources/elements/piano-roll.css
@@ -2,7 +2,8 @@
   background-color: hsla(0, 0%, 90%, 1);
 }
 
-.PianoRoll-key { }
+.PianoRoll-key {
+}
 
 .PianoRoll-key--natural {
   fill: hsla(0, 0%, 100%, 1);
