--- a/styles/core/_forms.css
+++ b/styles/core/_forms.css
@@ -32,7 +32,8 @@ textarea {
   min-height: calc(var(--lineHeight) * var(--fontSize));
 }
 
-select {}
+select {
+}
 
 option + option {
   margin-top: 0;
