--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,3 +3,23 @@
 body {
   background-color: #fafafa;
 }
+
+.mdl-layout__drawer label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.mdl-layout__drawer .mdl-textfield {
+  width: auto;
+}
+
+.mdl-layout__drawer mdl-slider,
+.mdl-layout__drawer mdl-textfield {
+  display: inline-block;
+  margin-top: -10px;
+}
+
+.mdl-layout__drawer mdl-textfield {
+  position: relative;
+  top: -3px;
+}
