--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,3 +23,9 @@ body {
   position: relative;
   top: -3px;
 }
+
+@media screen and (max-width: 1024px) {
+  .mdl-layout__content {
+    margin-top: 56px;
+  }
+}
