--- a/src/templates/base.njk
+++ b/src/templates/base.njk
@@ -13,8 +13,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Synthia</title>
-  <meta name="description" content="A configurable, modular synthesizer.">
+  <title>Soundfont</title>
+  <meta name="description" content="A soundfont player.">
 
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon-180.png">
   <link rel="apple-touch-startup-image" href="./assets/favicon-192.png">
@@ -22,16 +22,16 @@
   <link rel="icon" type="image/png" href="./assets/favicon-16.png" sizes="16x16">
   <link rel="mask-icon" href="./assets/favicon.svg" color="#2b8a3e">
 
-  <meta name="apple-mobile-web-app-title" content="Synthia">
+  <meta name="apple-mobile-web-app-title" content="Soundfont">
   <meta name="theme-color" content="#2b8a3e">
-  <meta name="application-name" content="Synthia">
+  <meta name="application-name" content="Soundfont">
   <link rel="manifest" href="./manifest.json">
 
   <link rel="stylesheet" href="./main.css">
 </head>
 <body class="o-sticky-footer">
   <header role="banner">
-    <h1>Synthia</h1>
+    <h1>Soundfont</h1>
   </header>
 
   <nav role="navigation">
@@ -49,7 +49,7 @@
   </main>
 
   <footer role="contentinfo">
-    <p>A <a href="https://github.com/sccherry/synthia">project</a> by <a href="https://stevecherry.net">Steve Cherry</a>.</p>
+    <p>A <a href="https://github.com/sccherry/soundfont">project</a> by <a href="https://stevecherry.net">Steve Cherry</a>.</p>
   </footer>
 
   <script src="./main.js"></script>
