--- a/src/templates/components/soundfont.njk
+++ b/src/templates/components/soundfont.njk
@@ -1,4 +1,4 @@
-<label for="soundfont">Soundfont</label>
+<label class="db" for="soundfont">Soundfont</label>
 <select id="soundfont" name="soundfont">
   {% for label, optgroup in generalMidi %}
     <optgroup label="{{ label }}">
