--- a/src/index.njk
+++ b/src/index.njk
@@ -2,12 +2,10 @@
 
 {% block content %}
 
-<div class="o-container">
-  {% for route in routes %}
-    <div id="{{ route.path }}" class="o-view">
-      {% include "templates/routes/" + route.path + ".njk" ignore missing %}
-    </div>
-  {% endfor %}
-</div>
+{% for route in routes %}
+  <div id="{{ route.path }}" class="view">
+    {% include "templates/routes/" + route.path + ".njk" ignore missing %}
+  </div>
+{% endfor %}
 
 {% endblock %}
