--- a/src/templates/components/envelope.njk
+++ b/src/templates/components/envelope.njk
@@ -1,15 +1,15 @@
 <fieldset>
-  <legend>Envelope</legend>
+  <legend class="f5">Envelope</legend>
 
-  <label for="envelope-attack">Attack</label>
-  <input id="envelope-attack" type="range" name="envelope-attack" max="1" step="0.001" value="{{ state.envelope.attack }}">
+  <label class="db" for="envelope-attack">Attack</label>
+  <input id="envelope-attack" class="w-100" type="range" name="envelope-attack" max="1" step="0.001" value="{{ state.envelope.attack }}">
 
-  <label for="envelope-decay">Decay</label>
-  <input id="envelope-decay" type="range" name="envelope-decay" max="1" step="0.001" value="{{ state.envelope.decay }}">
+  <label class="db" for="envelope-decay">Decay</label>
+  <input id="envelope-decay" class="w-100" type="range" name="envelope-decay" max="1" step="0.001" value="{{ state.envelope.decay }}">
 
-  <label for="envelope-sustain">Sustain</label>
-  <input id="envelope-sustain" type="range" name="envelope-sustain" max="1" step="0.001" value="{{ state.envelope.sustain }}">
+  <label class="db" for="envelope-sustain">Sustain</label>
+  <input id="envelope-sustain" class="w-100" type="range" name="envelope-sustain" max="1" step="0.001" value="{{ state.envelope.sustain }}">
 
-  <label for="envelope-release">Release</label>
-  <input id="envelope-release" type="range" name="envelope-release" max="1" step="0.001" value="{{ state.envelope.release }}">
+  <label class="db" for="envelope-release">Release</label>
+  <input id="envelope-release" class="w-100" type="range" name="envelope-release" max="1" step="0.001" value="{{ state.envelope.release }}">
 </fieldset>
