--- a/src/templates/components/octave.njk
+++ b/src/templates/components/octave.njk
@@ -1,4 +1,4 @@
-<label for="octave">Octave</label>
+<label class="db" for="octave">Octave</label>
 <select id="octave" name="octave">
   {% for option in [1, 2, 3, 4, 5, 6] %}
     <option value="{{ option }}"{% if option == state.octave %} selected{% endif %}>{{ option }}</option>
