--- a/src/templates/components/envelope.njk
+++ b/src/templates/components/envelope.njk
@@ -2,14 +2,14 @@
   <legend class="f5">Envelope</legend>
 
   <label class="db" for="envelope-attack">Attack</label>
-  <input id="envelope-attack" class="w-100" type="range" name="envelope-attack" max="1" step="0.001" value="{{ state.envelope.attack }}">
+  <input id="envelope-attack" class="w-100" type="range" name="envelope-attack" max="1" step="0.001" value="{{ initialState.envelope.attack }}">
 
   <label class="db" for="envelope-decay">Decay</label>
-  <input id="envelope-decay" class="w-100" type="range" name="envelope-decay" max="1" step="0.001" value="{{ state.envelope.decay }}">
+  <input id="envelope-decay" class="w-100" type="range" name="envelope-decay" max="1" step="0.001" value="{{ initialState.envelope.decay }}">
 
   <label class="db" for="envelope-sustain">Sustain</label>
-  <input id="envelope-sustain" class="w-100" type="range" name="envelope-sustain" max="1" step="0.001" value="{{ state.envelope.sustain }}">
+  <input id="envelope-sustain" class="w-100" type="range" name="envelope-sustain" max="1" step="0.001" value="{{ initialState.envelope.sustain }}">
 
   <label class="db" for="envelope-release">Release</label>
-  <input id="envelope-release" class="w-100" type="range" name="envelope-release" max="1" step="0.001" value="{{ state.envelope.release }}">
+  <input id="envelope-release" class="w-100" type="range" name="envelope-release" max="1" step="0.001" value="{{ initialState.envelope.release }}">
 </fieldset>
