--- a/src/templates/base.njk
+++ b/src/templates/base.njk
@@ -25,9 +25,12 @@
   <meta name="apple-mobile-web-app-title" content="Soundfont">
   <meta name="theme-color" content="#2b8a3e">
   <meta name="application-name" content="Soundfont">
+  <meta name="msapplication-config" content="./browserconfig.xml">
   <link rel="manifest" href="./manifest.json">
 
   <link rel="stylesheet" href="./main.css">
+
+  <link rel="canonical" href="https://stevecherry.net/soundfont/">
 </head>
 <body class="sans-serif flex flex-column min-vh-100">
   <header class="flex items-center ph3" role="banner">
