--- a/src/templates/components/piano-roll.njk
+++ b/src/templates/components/piano-roll.njk
@@ -2,30 +2,30 @@
   <title id="piano-roll-title">Piano Roll</title>
   <desc id="piano-roll-desc">A two octave piano keyboard.</desc>
 
-  <rect width="40" height="160" x="1"   y="1" class="piano-roll__key piano-roll__key--natural" data-note="0" />
-  <rect width="40" height="160" x="42"  y="1" class="piano-roll__key piano-roll__key--natural" data-note="2" />
-  <rect width="40" height="160" x="83"  y="1" class="piano-roll__key piano-roll__key--natural" data-note="4" />
-  <rect width="40" height="160" x="124" y="1" class="piano-roll__key piano-roll__key--natural" data-note="5" />
-  <rect width="40" height="160" x="165" y="1" class="piano-roll__key piano-roll__key--natural" data-note="7" />
-  <rect width="40" height="160" x="206" y="1" class="piano-roll__key piano-roll__key--natural" data-note="9" />
-  <rect width="40" height="160" x="247" y="1" class="piano-roll__key piano-roll__key--natural" data-note="11" />
-  <rect width="40" height="160" x="288" y="1" class="piano-roll__key piano-roll__key--natural" data-note="12" />
-  <rect width="40" height="160" x="329" y="1" class="piano-roll__key piano-roll__key--natural" data-note="14" />
-  <rect width="40" height="160" x="370" y="1" class="piano-roll__key piano-roll__key--natural" data-note="16" />
-  <rect width="40" height="160" x="411" y="1" class="piano-roll__key piano-roll__key--natural" data-note="17" />
-  <rect width="40" height="160" x="452" y="1" class="piano-roll__key piano-roll__key--natural" data-note="19" />
-  <rect width="40" height="160" x="493" y="1" class="piano-roll__key piano-roll__key--natural" data-note="21" />
-  <rect width="40" height="160" x="534" y="1" class="piano-roll__key piano-roll__key--natural" data-note="23" />
-  <rect width="40" height="160" x="575" y="1" class="piano-roll__key piano-roll__key--natural" data-note="24" />
+  <rect width="40" height="160" x="1"   y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="0" />
+  <rect width="40" height="160" x="42"  y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="2" />
+  <rect width="40" height="160" x="83"  y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="4" />
+  <rect width="40" height="160" x="124" y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="5" />
+  <rect width="40" height="160" x="165" y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="7" />
+  <rect width="40" height="160" x="206" y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="9" />
+  <rect width="40" height="160" x="247" y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="11" />
+  <rect width="40" height="160" x="288" y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="12" />
+  <rect width="40" height="160" x="329" y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="14" />
+  <rect width="40" height="160" x="370" y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="16" />
+  <rect width="40" height="160" x="411" y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="17" />
+  <rect width="40" height="160" x="452" y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="19" />
+  <rect width="40" height="160" x="493" y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="21" />
+  <rect width="40" height="160" x="534" y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="23" />
+  <rect width="40" height="160" x="575" y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="24" />
 
-  <rect width="21" height="80" x="31"  y="1" class="piano-roll__key piano-roll__key--accidental" data-note="1" />
-  <rect width="21" height="80" x="72"  y="1" class="piano-roll__key piano-roll__key--accidental" data-note="3" />
-  <rect width="21" height="80" x="154" y="1" class="piano-roll__key piano-roll__key--accidental" data-note="6" />
-  <rect width="21" height="80" x="195" y="1" class="piano-roll__key piano-roll__key--accidental" data-note="8" />
-  <rect width="21" height="80" x="236" y="1" class="piano-roll__key piano-roll__key--accidental" data-note="10" />
-  <rect width="21" height="80" x="318" y="1" class="piano-roll__key piano-roll__key--accidental" data-note="13" />
-  <rect width="21" height="80" x="359" y="1" class="piano-roll__key piano-roll__key--accidental" data-note="15" />
-  <rect width="21" height="80" x="441" y="1" class="piano-roll__key piano-roll__key--accidental" data-note="18" />
-  <rect width="21" height="80" x="482" y="1" class="piano-roll__key piano-roll__key--accidental" data-note="20" />
-  <rect width="21" height="80" x="523" y="1" class="piano-roll__key piano-roll__key--accidental" data-note="22" />
+  <rect width="21" height="80" x="31"  y="1" class="piano-roll__key piano-roll__key--accidental" tabindex="0" data-note="1" />
+  <rect width="21" height="80" x="72"  y="1" class="piano-roll__key piano-roll__key--accidental" tabindex="0" data-note="3" />
+  <rect width="21" height="80" x="154" y="1" class="piano-roll__key piano-roll__key--accidental" tabindex="0" data-note="6" />
+  <rect width="21" height="80" x="195" y="1" class="piano-roll__key piano-roll__key--accidental" tabindex="0" data-note="8" />
+  <rect width="21" height="80" x="236" y="1" class="piano-roll__key piano-roll__key--accidental" tabindex="0" data-note="10" />
+  <rect width="21" height="80" x="318" y="1" class="piano-roll__key piano-roll__key--accidental" tabindex="0" data-note="13" />
+  <rect width="21" height="80" x="359" y="1" class="piano-roll__key piano-roll__key--accidental" tabindex="0" data-note="15" />
+  <rect width="21" height="80" x="441" y="1" class="piano-roll__key piano-roll__key--accidental" tabindex="0" data-note="18" />
+  <rect width="21" height="80" x="482" y="1" class="piano-roll__key piano-roll__key--accidental" tabindex="0" data-note="20" />
+  <rect width="21" height="80" x="523" y="1" class="piano-roll__key piano-roll__key--accidental" tabindex="0" data-note="22" />
 </svg>
