Update service worker

--- a/src/templates/base.njk
+++ b/src/templates/base.njk
@@ -28,7 +28,7 @@
   <meta name="msapplication-config" content="./browserconfig.xml">
   <link rel="manifest" href="./manifest.json">
 
-  <link rel="stylesheet" href="./main.css">
+  <link rel="stylesheet" href="./styles/main.css">
 
   <link rel="canonical" href="https://stevecherry.net/soundfont/">
 </head>
@@ -55,6 +55,6 @@
     <p>A <a href="https://github.com/sccherry/soundfont">project</a> by <a href="https://stevecherry.net">Steve Cherry</a>.</p>
   </footer>
 
-  <script src="./main.js"></script>
+  <script src="./scripts/main.js" defer></script>
 </body>
 </html>
